# memories

./: .eslintrc.js  .gitattributes  .gitignore  .l10nignore  .php-cs-fixer.php  .prettierrc  404.html  CHANGELOG.md  CNAME  Dockerfile  Dockerfile.nvidia  Makefile  PR-DESCRIPTION.md  README.md  babel.config.js  build-ffmpeg-nvidia.sh  build-ffmpeg.sh  build.gradle  bundle.sh  chunk.go  ci-test.sh  composer.json  config.go  dev.Dockerfile  get-exiftool.sh  handler.go  index.html  main.go  manager.go  mkdocs.yml  package-lock.json  package.json  phpunit.integration.xml  phpunit.xml  playwright.config.ts  psalm-ls.xml  psalm.xml  run.sh  sitemap.xml  stream.go  (+12 more)
.circleci/: config.yml
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  postCreate.sh
.github/: FUNDING.yml
.tx/: config
android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
appinfo/: info.xml  routes.php
changelog/: index.html
config/: index.html
css/: custom-icons.scss  icons.scss  style.css
docs/: .gitignore  config.md  faq.md  file-types.md  hw-transcoding.md  index.md  install.md  memories-vs-photos.md  occ-commands.md  privacy.md  system-config.md  troubleshooting.md
e2e/: folders.spec.ts  login.ts  timeline.spec.ts
faq/: index.html
file-types/: index.html
go-vod/: .gitignore  Dockerfile  README.md  go.mod  (+6 more)
python/h3/_cy/: CMakeLists.txt  __init__.py  cells.pxd  cells.pyx  edges.pxd  edges.pyx  error_system.pxd  error_system.pyx  h3api.h  h3lib.pxd  latlng.pxd  latlng.pyx  memory.pxd  memory.pyx  to_multipoly.pyx  util.pxd  util.pyx  vertex.pxd  vertex.pyx
(+878 files in other folders)
